Updated Java Dependencies and tomcat.sh for resolving 404 error